--- a/src/main/resources/Templates/School/NoteBook/DetailNoteBook/indexDetailNote.html
+++ b/src/main/resources/Templates/School/NoteBook/DetailNoteBook/indexDetailNote.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Manager NoteBook</title>
+    <title>Manager NotebookDetail</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="/resources/static/CSS/main.css" rel="stylesheet">
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<div><h1>Manage Notebook</h1></div>
+<div><h1>Manage NotebookDetail</h1></div>
 <div>
     <div id="autoHide">
         <div th:if="${Error}">
@@ -26,18 +26,24 @@
         </div>
     </div>
     <table>
-        <th>NoteBook Id</th>
+        <th>Detail NoteBook Id</th>
         <th>Class</th>
-        <th>School</th>
+        <th>Teacher</th>
+        <th>Subject</th>
+        <th>Content Lecture</th>
+        <th>Date Written</th>
+        <th>Comment Teacher</th>
         <th>Feature</th>
-        <tr th:each="note : ${notebookList}">
+        <tr th:each="note : ${detailNoteList}">
             <td th:text="${note.id}"></td>
-            <td th:utext="'Name: '+ ${note.classes.name != null ? note.classes.name : 'null'} +'<br>Class id: '+ ${note.classes.id != null ? note.classes.id : 'null'}+'<br>Class of School id: '+ ${note.classes.school.id != null ? note.classes.school.id : 'null'}"></td>
-            <td th:text="${note.school.name != null ? note.school.name : 'null'} +' ('+ ${note.school.id != null ? note.school.id : 'null'}+')'"></td>
+            <td th:text="'Name: ' + ${note.noteBook.classes.name != null ? note.noteBook.classes.name : 'null'} +'<br>Class id: '+ ${note.noteBook.classes.id != null ? note.noteBook.classes.id : 'null'}+'<br>School id: '+ ${note.noteBook.classes.school.id != null ? note.noteBook.classes.school.id : 'null'}"></td>
+            <td th:text="'('+${teacher.id} + ') '+ ${teacher.firstName != null ? teacher.firstName : 'null'}"></td>
+            <td th:text="${note.contentLecture}"></td>
+            <td th:text="${note.teachingDay}"></td>
+            <td th:text="${note.teacherComment}"></td>
             <td>
-                <a th:href="@{/m-note/showModifyFormNote(id=${note.id})}" class="btn btn-success">Modify</a>
-                <a th:href="@{/m-note-detail/showManageDetailNote(id=${note.id})}" class="btn btn-primary">Detail</a>
-                <a th:href="@{/m-note/modify-delete(id=${note.id})}" class="btn btn-danger">Delete</a>
+                <a th:href="@{/m-note-detail/showModifyFormNoteDetail(id=${note.id})}" class="btn btn-success">Modify</a>
+                <a th:href="@{/m-note-detail/modify-delete(id=${note.id})}" class="btn btn-danger">Delete</a>
             </td>
         </tr>
     </table>
@@ -46,7 +52,7 @@
     <span th:text="${success}" class="alert alert-danger"></span>
 </div>
 <div>
-    <a class="btn btn-primary" th:href="@{/m-note/showFormAddNotebook}">Add Notebook</a>
+    <a class="btn btn-primary" th:href="@{/m-note-detail/showFormAddNoteDetail(id=${noteBook_id})}">Add Note Detail</a>
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
 </div>
 </body>
