--- a/src/main/resources/Templates/School/Subject/indexSubject.html
+++ b/src/main/resources/Templates/School/Subject/indexSubject.html
@@ -2,10 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Manager NoteBook</title>
+    <title>Manager Subject</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="/resources/static/CSS/main.css" rel="stylesheet">
+
     <style>
         table, th, td{
             border: 1px solid black;
@@ -15,7 +16,7 @@
 </head>
 
 <body>
-<div><h1>Manage Notebook</h1></div>
+<div><h1>Manage Subject</h1></div>
 <div>
     <div id="autoHide">
         <div th:if="${Error}">
@@ -26,18 +27,25 @@
         </div>
     </div>
     <table>
-        <th>NoteBook Id</th>
-        <th>Class</th>
+        <th>Subject Id</th>
+        <th>Subject Name</th>
+        <th>Transcript</th>
+        <th>Teacher</th>
+        <th>Student</th>
+        <th>ScoreCard</th>
         <th>School</th>
         <th>Feature</th>
-        <tr th:each="note : ${notebookList}">
-            <td th:text="${note.id}"></td>
-            <td th:utext="'Name: '+ ${note.classes.name != null ? note.classes.name : 'null'} +'<br>Class id: '+ ${note.classes.id != null ? note.classes.id : 'null'}+'<br>Class of School id: '+ ${note.classes.school.id != null ? note.classes.school.id : 'null'}"></td>
-            <td th:text="${note.school.name != null ? note.school.name : 'null'} +' ('+ ${note.school.id != null ? note.school.id : 'null'}+')'"></td>
+        <tr th:each="subject : ${subjectList}">
+            <td th:text="${subject.id}"></td>
+            <td th:text="${subject.nameSubject}"></td>
+            <td th:text="${subject.transcript != null ? subject.transcript : 'null'}"></td>
+            <td th:text="${subject.teacherList != null ? subject.teacherList : 'null'}"></td>
+            <td th:text="${subject.studentList != null ? subject.studentList : 'null'}"></td>
+            <td th:text="${subject.scoreCard != null ? subject.scoreCard : 'null'}"></td>
+            <td th:text="${subject.schoolList != null ? subject.schoolList : 'null'}"></td>
             <td>
-                <a th:href="@{/m-note/showModifyFormNote(id=${note.id})}" class="btn btn-success">Modify</a>
-                <a th:href="@{/m-note-detail/showManageDetailNote(id=${note.id})}" class="btn btn-primary">Detail</a>
-                <a th:href="@{/m-note/modify-delete(id=${note.id})}" class="btn btn-danger">Delete</a>
+                <a th:href="@{/m-subject/showModifyFormSubject(id=${subject.id})}" class="btn btn-success">Modify</a>
+                <a th:href="@{/m-subject/modify-delete(id=${subject.id})}" class="btn btn-danger">Delete</a>
             </td>
         </tr>
     </table>
@@ -46,7 +54,7 @@
     <span th:text="${success}" class="alert alert-danger"></span>
 </div>
 <div>
-    <a class="btn btn-primary" th:href="@{/m-note/showFormAddNotebook}">Add Notebook</a>
+    <a class="btn btn-primary" th:href="@{/m-subject/showFormAddSubject}">Add Subject</a>
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
 </div>
 </body>
