--- a/src/main/resources/Templates/School/Subject/modifyFormSubject.html
+++ b/src/main/resources/Templates/School/Subject/modifyFormSubject.html
@@ -2,65 +2,56 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Modify School</title>
+    <title>Modify Subject</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="/resources/static/CSS/main.css" rel="stylesheet">
     <script src="/resources/static/JavaScript/function.js"></script>
 </head>
 <body>
-<h1>Modify School</h1>
+<h1>Modify Subject</h1>
 <div>
-    <form th:action="@{/api-school/modify-process}" th:object="${school}" method="post">
-        <div th:if="${Error}" class="alert alert-danger">
-            <span th:text="${Error}"></span>
-        </div>
-        <div>
-            <label th:field="*{id}">School Id: </label>
-            <input type="hidden" th:field="*{id}" name="schoolid">
-            <div th:if="${#fields.hasErrors('id')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('id')}" th:text="${error}"></li>
-                </ul>
+    <form th:action="@{/m-subject/modify-process}" th:object="${subject}" method="post">
+        <div id="autoHide">
+            <div  th:if="${Error}" class="alert alert-danger">
+                <span th:text="${Error}"></span>
             </div>
         </div>
         <div>
-            <label>School Name: </label>
-            <input type="text" th:field="*{name}" placeholder="Input name school"
-                   name="schoolname">
-            <div th:if="${#fields.hasErrors('name')}">
+            <label>Subject Id: <span th:field="*{id}"></span></label>
+            <input type="hidden" th:field="*{id}">
+        </div>
+        <div>
+            <label>Subject Name: </label>
+            <select th:field="*{nameSubject}" required>
+                <option th:value="literature">Literature</option>
+                <option th:value="math">Math</option>
+                <option th:value="history">History</option>
+                <option th:value="geography">Geography</option>
+                <option th:value="biology">Biology</option>
+                <option th:value="chemistry">Chemistry</option>
+                <option th:value="civic">Civic Education</option>
+                <option th:value="music">Music</option>
+                <option th:value="physical">Physical Education</option>
+                <option th:value="foreign-language">Foreign Language</option>
+                <option th:value="it">Information Technology</option>
+            </select>
+            <div th:if="${#fields.hasErrors('nameSubject')}">
                 <ul>
-                    <li th:each="error: ${#fields.hasErrors('name')}" th:text="${error}"></li>
+                    <li th:each="e: ${#fields.hasErrors('nameSubject')}" th:text="${e}"></li>
                 </ul>
             </div>
         </div>
+
         <div>
-            <label>School Address: </label>
-            <input type="text" th:field="*{address}" placeholder="Input address school"
-                   name="schooladdress">
-            <div th:if="${#fields.hasErrors('address')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('address')}" th:text="${error}"></li>
-                </ul>
+            <label>List School: </label>
+            <div th:each="school : ${schools}">
+                <input type="checkbox" th:value="${school.id}" th:field="*{schoolList}" name="schoolId">
+                <span th:text="${school.name} +' ('+ ${school.id}+')'"></span>
             </div>
-        </div>
-        <div>
-            <label>School Phone: </label>
-            <input type="tel" th:field="*{phone}" placeholder="Input phone school"
-                   name="schoolphone">
-            <div th:if="${#fields.hasErrors('phone')}">
+            <div th:if="${#fields.hasErrors('schoolList')}">
                 <ul>
-                    <li th:each="error: ${#fields.hasErrors('phone')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label>School Level: </label>
-            <input type="tel" th:field="*{level}" placeholder="Input level school"
-                   name="schoolLevel">
-            <div th:if="${#fields.hasErrors('level')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('level')}" th:text="${error}"></li>
+                    <li th:each="e: ${#fields.hasErrors('schoolList')}" th:text="${e}"></li>
                 </ul>
             </div>
         </div>
@@ -69,12 +60,12 @@
         </div>
     </form>
     <div th:if="${success}">
-        <h3>You updated a school "<span th:text="${success}"></span> ",</h3>
+        <h3>You updated a subject "<span th:text="${success}"></span> ",</h3>
     </div>
 </div>
 <div>
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-    <a class="btn btn-primary" th:href="@{/api-school/showManageSchool}">School List Manage</a>
+    <a class="btn btn-primary" th:href="@{/m-subject/showManageSubject}">Subject List Manage</a>
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
