--- a/src/main/resources/Templates/home.html
+++ b/src/main/resources/Templates/home.html
@@ -116,6 +116,9 @@
         <div class="mt-1">
             <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-subject/showManageSubject}">Subject manage</a>
         </div>
+        <div class="mt-1">
+            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-transcript/showManageTranscript}">Transcript manage</a>
+        </div>
     </div>
 </div>
 </body>
