add feature StudyRecord: add, modify, delete

--- a/src/main/resources/Templates/home.html
+++ b/src/main/resources/Templates/home.html
@@ -119,6 +119,9 @@
         <div class="mt-1">
             <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-transcript/showManageTranscript}">Transcript manage</a>
         </div>
+        <div class="mt-1">
+            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-study/showManageStudyRecord}">StudyRecord manage</a>
+        </div>
     </div>
 </div>
 </body>
