--- a/src/main/resources/Templates/login.html
+++ b/src/main/resources/Templates/login.html
@@ -74,7 +74,7 @@
         </div>
 
         <!-- Submit button -->
-        <button type="submit" class="btn btn-primary btn-block mb-4">Longin</button>
+        <button type="submit" class="btn btn-primary btn-block mb-4">Login</button>
 
         <!-- Register buttons -->
         <div class="text-center">
